--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     --main-color-alt: #1787e0;
     --main-transition: 0.3s;
     --main-padding-top: 100px;
-    --main-padding-bottom: 100px;
+    --main-padding-bottom: 100px
     --bg-section: #ececec;
 }
 *{
@@ -91,7 +91,26 @@ ul{
 .main-title::before{
     left: -30px;
 }
-
+.dots{
+    position: absolute;
+    width: 204px;
+    height: 186px;
+    background-image: url(../images/dots.png);
+    background-repeat: no-repeat;
+}
+@media(max-width: 767px) {
+    .dots{
+        display: none;
+    }   
+}
+.dots-up{
+    right: 0;
+    top: 200px;
+}
+.dots-down{
+    left: 0;
+    bottom: 200px;
+}
 
 /* small */
 @media (min-width: 768px){
@@ -1011,11 +1030,642 @@ ul{
 .events{
     padding-top: var(--main-padding-top);
     padding-bottom: var(--main-padding-bottom);
+    position: relative;
+}
+.events .container{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.events .container img{
+    max-width: 450px;
+}
+@media(max-width: 991px){
+    .events .container img{
+        display: none;
+    }
+}
+.events .container .info{
+    flex: 1;
+}
+.events .container .info .time{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+.events .container .info .time .unit {
+    border: 1px solid #d4d4d4;
+    border-radius: 6px;
+    width: 75px;
+    text-align: center;
+    transition: var(--main-transition);
+}
+.events .container .info .time .unit:hover{
+    border-color: var(--main-color);
+}
+.events .container .info .time .unit span{
+    display: block;
+}
+.events .container .info .time .unit span:first-of-type{
+    color: var(--main-color);
+    font-size: 35px;
+    font-weight: bold;
+    padding: 15px;
+}
+.events .container .info .time .unit span:last-of-type{
+    padding: 8px 10px;
+    font-size: 13px;
+    text-transform: capitalize;
+    border-top: 1px solid #d4d4d4;
+    transition: var(--main-transition);
+}
+.events .container .info .time .unit:hover span:last-of-type{
+    border-color: var(--main-color);
+}
+.events .container .info .title{
+    font-size: 30px;
+    text-transform: capitalize;
+    margin: 40px 0 0;
+    text-align: center;
+}
+.events .container .info .description{
+    font-size: 19px;
+    color: #777;
+    line-height: 1.7;
+    text-align: center;
+
+}
+.events .container .subscribe{
+    width: 100%;
+    margin-top: 50px;
+    
+}
+.events .container .subscribe form{
+    width: 600px;
+    margin: 20px auto;
+    background-color: #f6f5f5;
+    display: flex;
+    gap: 20px;
+    padding: 30px 40px;
+    border-radius: 50px;
+}
+@media(max-width: 767px){
+    .events .container .subscribe form{ 
+        max-width: 100%;
+        padding: 20px;
+        border-radius: 0;
+        flex-direction: column;
+    }
+}
+.events .container .subscribe form input[type='email']{
+    padding: 20px;
+    border-radius: 50px;
+    border: none;
+    display: flex;
+    flex: 1;
+    caret-color: var(--main-color);
+}
+@media(max-width: 767px) {
+    .events .container .subscribe form input[type='email']{
+        border-radius: 0;
+    }
+}
+.events .container .subscribe form input[type='email']:focus{
+    outline: none;
+}
+.events .container .subscribe form input[type='email']::placeholder{
+    transition: opacity var(--main-transition);
+}
+.events .container .subscribe form input[type='email']:focus::placeholder{
+    opacity: 0;
+}
+.events .container .subscribe form input[type='submit']{
+    border: none;
+    background-color: var(--main-color);
+    color: white;
+    border-radius: 50px;
+    font-weight: bold;
+    padding: 20px;
+    cursor: pointer;
+    transition: var(--main-transition);
+}
+@media(max-width: 767px) {
+    .events .container .subscribe form input[type='submit']{
+        border-radius: 0;
+        padding: 15px;
+    }
+}
+.events .container .subscribe form input[type='submit']:hover{
+    background-color: var(--main-color-alt);
 }
 /* End Events */
-
-
-
+/* Start Pricing */
+.pricing{
+    background-color: var(--bg-section);
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    position: relative;
+}
+.pricing .container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    gap: 40px;
+}
+.pricing .container .box{
+    background-color: white;
+    box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%),0 2px 4px 0 rgb(0 0 0 / 12%);
+    position: relative;
+} 
+.pricing .box::before,
+.pricing .box::after{
+    content: "";
+    position: absolute;
+    background-color: #f6f5f5;
+    width: 0;
+    height: 50%;
+    transition: var(--main-transition);
+}
+.pricing .box::before{
+    left: 0;
+    top: 0;
+}
+.pricing .box::after{
+    right: 0;
+    bottom: 0;
+}
+.pricing .box:hover::before,
+.pricing .box:hover::after{
+    width: 100%;
+}
+@media (min-width: 1200px){
+    .pricing .box:nth-child(2){
+        top: -20px;
+    }
+}
+.pricing .box:nth-child(2) .label{
+    position: absolute;
+    writing-mode: vertical-rl;
+    text-transform: capitalize;
+    font-weight: bold;
+    background-color: var(--main-color);
+    color: white;
+    padding: 10px 10px 35px 10px;
+    font-size: 18px;
+    right: 20px;
+    width: 40px;
+}
+.pricing .box:nth-child(2) .label::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border-width: 20px;
+    border-style: solid;
+    border-color: transparent transparent white transparent;
+}
+.pricing .box .text{
+    text-align: center;
+    position: relative;
+    z-index: 10;
+}
+.pricing .box .text h3 {
+    text-transform: capitalize;
+    font-size: 25px;
+    margin: 25px 0 30px;
+} 
+.pricing .box .text img{
+    max-width: 80px;
+}
+.pricing .box .text .price{
+    margin: 40px 0 0;
+}
+.pricing .box .text .price span{
+    display: block;
+}
+.pricing .box .text .price span:first-of-type{
+    font-size: 50px;
+    font-weight: bold;
+    color: var(--main-color);
+}
+.pricing .box .text .price span:last-child{
+    color: #777;
+    text-transform: capitalize;
+    margin: 10px 0 20px;
+}
+.pricing .box .list {
+    position: relative;
+    z-index: 10;
+}
+.pricing .box .list li{
+    padding: 20px;
+    border-top: 1px solid #eee;
+}
+.pricing .box .list li i{
+    color: var(--main-color);
+    margin-right: 10px;
+}
+.pricing .box  a{
+    position: relative;
+    z-index: 10;
+    display: block;
+    width: fit-content;
+    margin: 30px auto 40px;
+    border: 2px solid var(--main-color);
+    border-radius: 6px;
+    padding: 15px 20px;
+    font-weight: bold;
+    color: var(--main-color);
+    text-transform: capitalize;
+    transition: background-color var(--main-transition),color var(--main-transition);
+}
+.pricing .box  a:hover{
+    background-color: var(--main-color);
+    color: white;
+}
+/* End Pricing */
+/* Start Top Videos */
+.top-videos{
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+}
+.top-videos .holder{
+    display: flex;
+    justify-content: center;
+    background-color: var(--bg-section);
+    border: 1px solid #DDD;
+}
+@media(max-width: 991px){
+    .top-videos .holder{
+        flex-direction: column;
+    }
+}
+.top-videos .holder .list{
+    min-width: 300px;
+    background-color: white;
+}
+.top-videos .holder .list h3{
+    margin: 0;
+    padding: 20px;
+    text-transform: capitalize;
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+    background-color: #f4f4f4;
+}
+.top-videos .holder .list ul li{
+    padding: 20px;
+    text-transform: capitalize;
+    border-top: 1px solid var(--bg-section);
+    cursor: pointer;
+    transition: color var(--main-transition), background-color var(--main-transition);
+}
+.top-videos .holder .list ul li:hover{
+    background-color: #fafafa;
+    color: var(--main-color);
+}
+.top-videos .container .list ul li span{
+    display: block;
+    margin-top: 10px;
+    color: #777;
+}
+.top-videos .container .preview{
+    background-color: #e2e2e2;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.top-videos .container .preview img{
+    width: 100%;
+}
+.top-videos .container .preview .info{
+    background-color: white;
+    padding: 20px;
+    text-transform: capitalize;
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+.top-videos .container .preview .info span{
+    color: #777;
+}
+.top-videos .container .preview .info span i{
+    display: inline-block;
+    margin-left: 15px;
+    cursor: pointer;
+}
+@media (max-width: 767px) {
+    .top-videos .container .preview .info span{
+        display: none;
+    }
+}
+/* End Top Videos */
+/* Start Statistics  */
+.statistics{
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    background-image: url(../images/stats.jpg);
+    background-size: cover;
+    position: relative;
+    min-width: 300px;
+}
+.statistics::before{
+    content: "";
+    background-color: rgba(255, 255, 255, 95%);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+.statistics h2{
+    text-transform: capitalize;
+    font-weight: bold;
+    font-size: 40px;
+    width: fit-content;
+    margin: 0 auto 50px;
+    position: relative;
+} 
+.statistics .container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+    gap: 20px;
+}
+.statistics .container .box{
+    background-color: white;
+    text-align: center;
+    padding: 30px 15px;
+    position: relative;
+    opacity: 0.8;
+    transition: var(--main-transition);
+}
+.statistics .container .box:hover{
+    opacity: 1;
+}
+.statistics .container .box::before,
+.statistics .container .box::after{
+    content: "";
+    background-color: var(--main-color);
+    position: absolute;
+    width: 2px;
+    height: 0;
+    transition: height 1s;
+}
+.statistics .container .box::before{
+    left: 0;
+    top: 0;
+}
+.statistics .container .box::after{
+    right: 0;
+    bottom: 0;
+}
+.statistics .container .box:hover::before,
+.statistics .container .box:hover::after{
+    height: 100%;
+}
+.statistics .container .box .number{
+    display: block;
+    margin: 10px 0;
+    font-size: 50px;
+    font-weight: bold;
+}
+.statistics .container .box .text{
+    font-size: 20px;
+    color: var(--main-color);
+    text-transform: capitalize;
+    font-weight: bold;
+    font-style: italic;
+}
+/* End Statistics  */
+/* Start Discount */
+.discount{ 
+    min-height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+}
+@media(max-width: 991px){
+    .discount{
+        padding-bottom: 60px;
+    }
+}
+.discount .image{
+    background-image: url(../images/discount-background1.jpg);
+    background-size: cover;
+    color: white;
+    flex-basis: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    z-index: -1;
+    animation: change-background 10s linear infinite;
+}
+.discount .image::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(23, 135, 224, 95%);
+    z-index: -1;
+}
+@media(max-width: 991px){
+    .discount .image{
+        flex-basis: 100%;
+    }
+}
+.discount .form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 50%;
+}
+@media(max-width: 991px){
+    .discount .form{
+        flex-basis: 100%;
+    }
+}
+.discount .form .input{
+    display: block;
+    width: 100%;
+    margin-bottom: 25px;
+    padding: 15px;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    background-color: #f9f9f9;
+    caret-color: var(--main-color);
+}  
+.discount .form textarea.input{
+    resize: none;
+    height: 200px;
+}
+.discount .form .input:focus{
+    outline: none;
+}
+.discount .form input[type="submit"]{
+    display: block;
+    width: 100%;
+    padding: 15px;
+    background-color: var(--main-color);
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    transition: var(--main-transition);
+}
+.discount .form input[type="submit"]:hover{
+    background-color: var(--main-color-alt);
+}
+.discount .content{
+    text-align: center;
+    padding: 0 20px;
+}
+.discount .content h2{
+    text-transform: capitalize;
+    font-size: 40px;
+    letter-spacing: -2;
+}
+.discount .content p{
+    line-height: 1.6;
+    font-size: 18px;
+    max-width: 500px;
+}
+.discount .content img{
+    width: 100%;
+    max-width: 100%;
+}
+/* End Discount */
+/* Start Footer*/
+.footer{
+    background-color: #191919;
+    padding: 70px 0 0;
+}
+@media(max-width: 767px){
+    .footer{
+        text-align: center;
+    }
+}
+.footer .container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+    gap: 40px;
+}
+.footer .box h3{
+    margin: 0 0 20px;
+    color: white;
+    text-transform: capitalize;
+    font-size: 50px;
+}
+.footer .box .social{
+    display: flex;
+}
+@media(max-width: 767px){
+    .footer .box .social{
+        justify-content: center;
+    }
+}
+.footer .box .social li{
+    margin-right: 10px;
+}
+.footer .box .social li a{
+    background-color: rgb(49, 49, 49);
+    color: rgb(185, 185, 185);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
+    transition: var(--main-transition);
+}
+.footer .box .social li a.facebook:hover{
+    background-color: rgb(24, 119, 242);
+}
+.footer .box .social li a.twitter:hover{
+    background-color: rgb(29, 161, 242);
+}
+.footer .box .social li a.youtube:hover{
+    background-color: rgb(255, 0, 0);
+}
+.footer .box .text{
+    line-height: 1.7;
+    color: rgb(185, 185, 185);
+}
+.footer .box .links li {
+    padding: 15px 0;
+    transition: var(--main-transition);
+}
+.footer .box .links li:not(:last-child){
+    border-bottom: 1px solid #444;
+}
+.footer .box .links li:hover{
+    padding-left: 10px;
+}
+.footer .box .links li:hover a{
+    color: white;
+}
+.footer .box .links li a{
+    color: rgb(185, 185, 185);
+    text-transform: capitalize;
+    transition: var(--main-transition);
+}
+.footer .box .links li a::before{
+    font-family: "Font Awesome 5 Free";
+    content: "\F101";
+    font-weight: 900;
+    margin-right: 10px;
+    color: var(--main-color);
+}
+.footer .box .line{
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
+@media(max-width: 767px){
+    .footer .box .line{
+        flex-direction: column;
+    }
+}
+.footer .box .line i{
+    color: var(--main-color);
+    font-size: 25px;
+    margin-right: 15px;
+}
+@media(max-width: 767px){
+    .footer .box .line i{
+        margin-right: 0;
+        margin-bottom: 15px;
+    }
+}
+.footer .box .line .info{
+    color: rgb(185, 185, 185);
+    text-transform: capitalize;
+    line-height: 1.7;
+    flex: 1;
+}
+.footer .box .line .info span{
+    display: block;
+}
+.footer .box.footer-gallery img{
+    width: 78px;
+    border: 3px solid white;
+    margin: 2px;
+}
+.footer .copyright{
+    color: white;
+    text-transform: capitalize;
+    border-top: 1px solid #444;
+    padding: 25px;
+    text-align: center;
+    margin:50px 0 0;
+}
+.footer .copyright i{
+    color: red;
+}
+/* End Footer*/
 
 
 
@@ -1073,7 +1723,14 @@ ul{
         transform: translateX(10px);
     }
 }
-
+@keyframes change-background{
+    0%,100%{
+        background-image: url(../images/discount-background1.jpg);
+    }
+    50%{
+        background-image: url(../images/discount-background2.jpg);
+    }
+}
 
 
 /* End Animation */
